--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ PyJWT==2.10.1
 python-dateutil==2.9.0.post0
 python-dotenv==0.20.0
 s3transfer==0.5.2
+stripe>=12.0.0
 six==1.17.0
 SQLAlchemy==2.0.41
 typing_extensions==4.14.0
