--- a/requirements.txt
+++ b/requirements.txt
@@ -51,3 +51,12 @@ mypy==1.10.1
 
 # Production WSGI server (alternative to uvicorn)
 gunicorn==22.0.0
+
+# Machine Learning - PyTorch and related libraries
+torch>=2.0.0
+torchvision>=0.15.0
+torchaudio>=2.0.0
+transformers>=4.30.0
+scikit-learn>=1.3.0
+numpy>=1.24.0
+pandas>=2.0.0
